[tool.poetry]
name = "grind75base"
version = "0.1.0"
description = ""
authors = ["vjcspy <mr.vjcspy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
prefer-active-python=true